--- a/wiki/Downloads.wiki
+++ b/wiki/Downloads.wiki
@@ -39,6 +39,7 @@ The !RubyGem method describe above is preferred, but if you insist...
   # Make sure you have a [http://www.ruby-lang.org/en/downloads/ Ruby] interpreter installed. Version 1.8.6 or later is recommended.
   # Download the dependencies. You will need (at least):
     * [http://rubyforge.org/projects/activesupport ActiveSupport]
+    * [http://rubyforge.org/projects/activerecord ActiveRecord]
     * [http://rubyforge.org/projects/picnic Picnic]
   # Install the dependencies as per their individual install instructions. If for some insane reason you're trying to avoid !RubyGems, the general procedure is to install the libraries somewhere in Ruby's include path (for example `/usr/lib/ruby/site_ruby/1.8` on some Linux systems).
   # Download the RubyCAS-Server source archive from [http://rubyforge.org/frs/?group_id=3127&release_id=20723 RubyCAS-Server RubyForge downloads page]. 
