--- a/wiki/Downloads.wiki
+++ b/wiki/Downloads.wiki
@@ -2,7 +2,7 @@
 
 == The Easy Way ==
 
-If you already have Ruby installed, you should be able to install RubyCAS-Server by running the following command:
+If you already have a Ruby package installed, you should be able to install RubyCAS-Server by running the following command:
 
 {{{
 gem install rubycas-server
