Edited wiki page through web user interface.

--- a/wiki/Downloads.wiki
+++ b/wiki/Downloads.wiki
@@ -22,7 +22,7 @@ You can download the RubyCAS-Server !RubyGem package or source code directly fro
   # Answer 'Yes' when asked about installing dependencies.
 
 
-RubyCAS-Server should now be installed. Try running `rubycas-server` from your command line. By default RubyCAS-Server is pre-configured for operation on Linux. The program has to be able to write some configuration files to `/etc` and its log to `/var/log/casserver.log`, so you will have to run the `rubycas-server` command as root (i.e. `sudo rubycas-server`). Try `rubycas-server -h` if you need to store your configuration files elsewhere. If you are running on Windows, you will have to translate some of this Linux jargon into appropriate equivalents for your system.
+RubyCAS-Server should now be installed. Try running `rubycas-server` from your command line. By default RubyCAS-Server is pre-configured for operation on Linux. The program has to be able to write some configuration files to `/etc` and its log to `/var/log/casserver.log`, so you will have to run the `rubycas-server` command as root (i.e. `sudo rubycas-server`). If you prefer to store your configuration files elsewhere, try running `rubycas-server` with the `-h` flag for a list of command-line options. If you are running on Windows, you will have to translate some of this Linux jargon into appropriate equivalents for your system.
 
 The first time you run RubyCAS-Server, the server will try to create a default configuration file for you in `/etc/rubycas-server/config.yml` and will then exit. Have a look inside this file and edit it to your needs. RubyCAS-Server requires a SQL database; configuration examples are provided for various database servers (MySQL, PostgreSQL, SQLite, etc.). Before running the `rubycas-server` command again, make sure that the database you've configured is ready to be used. For example, if you're using mysql, you'll have to create the database first:
 
