getting pedantic with the History.txt

--- a/History.txt
+++ b/History.txt
@@ -1,7 +1,7 @@
 === 0.7.0 :: In Progress
 
-* New features:
-  * Implemented single-sign-out functionality as specified in CAS 3.1.  See
+* New functionality:
+  * Implemented single-sign-out functionality as specified in CAS 3.3.  See
     http://www.ja-sig.org/wiki/display/CASUM/Single+Sign+Out.
   * It is now possible to configure Authenticators to return extra attributes
     to CAS clients alongside the username. For an example of how to do this see
