--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,8 @@
+=== 0.7.1 :: 2008-11-10
+
+* Fixed dependency loading problems introduced by upstream changes in RubyGems 
+  1.3.1.
+
 === 0.7.0 :: 2008-11-04
 
 * New functionality:
