--- a/wiki/Localization.wiki
+++ b/wiki/Localization.wiki
@@ -13,6 +13,7 @@ Currently the following localizations are available:
   * Japanese (ja_JP)
   * Polish (pl_PL)
   * Russian (ru_RU)
+  * Brazilian Portuguese (pt_BR)
 
 These translations should work out of the box if you install RubyCAS-Server as a gem; otherwise you may have to build he locale .mo files by running the `rake mo` command in the RubyCAS-Server installation directory.
 
