--- a/wiki/QuickStart.wiki
+++ b/wiki/QuickStart.wiki
@@ -30,7 +30,7 @@ To set up a full CAS infrastructure you will have to:
     * Be careful about indentation. *Use only spaces, not tabs!* The configuration uses YAML, which is very sensitive to indentation.
   # Run `/usr/bin/rubycas-server` (try `/usr/bin/rubycas-server -h` for a list of command-line options).
 
-You should now be up and running. The server's output should show you the URL where you can access the CAS login page.
+You should now be up and running. Depending on the settings you entered in your config.yml file (i.e. port, hostname, etc.), the server should now be available at https://localhost  (or some variation thereof).
 
 More detailed configuration information is available at HowToConfigure and UsageScenarios, but if you prefer to jump right in, you should be able to figure things out based on the comments in the sample config.
 
@@ -43,6 +43,10 @@ Optionally, you can set up RubyCAS-Server to run as a background service on your
   # Add the rubycas-server script to startup. This should be something like `chkconfig -a rubycas-server` (on Debian/Ubuntu, it will probably be `update-rc.d rubycas-server defaults`).
 
 The `init.d` script simply uses the rubycas-server-ctl script to start and launch the server. If you wish, you can do this manually; `rubycas-server-ctl start` starts the server, and `rubycas-server-ctl stop` stops it. If you run into trouble with the `init.d` script, try manually running `rubycas-server-ctl start --verbose` and you should get a detailed explanation of the problem.
+
+===Running under Apache with Phusion Passenger===
+
+See DeployingUnderPhusionPassenger
 
 
 *If you encounter any problems with RubyCAS-Server, please do not hesitate to [http://code.google.com/p/rubycas-server/issues/list open an issue ticket]!*
